Updated UI color and fix employeeid

--- a/views/access/access.ejs
+++ b/views/access/access.ejs
@@ -9,7 +9,7 @@
                 </button>
             </div>
             <div class="custom-modal-body">
-                <div class="card shadow">
+                <div class="card ">
                     <div class="card-header py-2 header-bg">
                         <h6 class="m-0 font-weight-bold table-title text-white">Update Access: </h6>
                     </div>
@@ -63,7 +63,7 @@
                             </div>
                         </div>
                         <div class="col-md-4 align mt-1">
-                            <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-50">
+                            <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory w-50">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                 Add
                             </button> 
@@ -74,7 +74,7 @@
         </div>
     </div>
 
-<div class="card shadow mb-4 table-size">
+<div class="card  mb-4 table-size">
     <div class="card-header py-3 header-bg">
         <div class="row">
             <div class="col-md-6">
