--- a/views/branch/branch.ejs
+++ b/views/branch/branch.ejs
@@ -60,7 +60,7 @@
                                 <div class="text-center">
                                     <img
                                     id="logoimagemodal"
-                                    src="/images/img/logo(Small).png"
+                                    src="/images/img/asvesti.png"
                                     class="img-thumbnail "
                                     alt="..."
                                 />
@@ -144,7 +144,7 @@
                             <div class="align-img">
                                 <img
                                 id="logoimage"
-                                src="/images/img/logo(Small).png"
+                                src="/images/img/asvesti.png"
                                 class="img-thumbnail "
                                 alt="..."
                             />
