--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <!-- Content Row -->
 <div class="row">
-    <div class="col-lg-7 padding-fix mb-2">
+    <div class="col-lg-7 padding-fix mb-2 ">
         <div class="card">
             <div class="card-header py-3 header-bg">
                 <h6 class="m-0 font-weight-bold text-white">Best Sellers: <span id="bestSellersFilterLabel">Daily</span></h6>
@@ -38,7 +38,7 @@
     <div class="col-lg-5 mb-2">
         <div class="card dashboard-size">
             <div class="card-header py-3 header-bg">
-                <h6 class="header m-0 font-weight-bold text-white"><span id="currentFilterLabel">Daily</span> Sales</h6>
+                <h6 class="header m-0 font-weight-bold text-white"><span class="text-white" id="currentFilterLabel">Daily</span> Sales</h6>
             </div>
             <div class="card-body">
                 <div class="input-group mb-2">
@@ -71,7 +71,7 @@
 </div>
 
     <!-- DataTales Example -->
-<div class="card shadow mb-2">
+<div class="card mb-2">
     <div class="card-header py-3 header-bg">
         <h6 class="m-0 font-weight-bold table-title text-white">Current Year Sales</h6>
     </div>
@@ -79,9 +79,9 @@
         <canvas id="salesChart"></canvas>
     </div>
 </div>
-<div class="card shadow mb-2">
+<div class="card mb-2">
     <div class="card-header py-3 header-bg">
-        <h6 class="m-0 font-weight-bold table-title text-white">Shift Reports</h6>
+        <h6 class="m-0 font-weight-bold table-title text-asvesti">Shift Reports</h6>
     </div>
     <div class="card-body">
         
