--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -47,8 +47,8 @@
                                 <div class="text-center">
                                     <img
                                     id="productimagemodal"
-                                    src="/images/img/logo(Small).png"
-                                    class="img-thumbnail "
+                                    src="/images/img/asvesti.png"
+                                    class="img-thumbnail"
                                     alt="..."
                                 />
                                 </div>
@@ -134,7 +134,7 @@
                             <div class="align-img">
                                 <img
                                 id="productimage"
-                                src="/images/img/logo(Small).png"
+                                src="/images/img/asvesti.png"
                                 class="img-thumbnail "
                                 alt="..."
                             />
