--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -3,9 +3,9 @@
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/index">
         <div class="sidebar-brand-icon">
-            <img src="images/img/5L_logo(White).png" class="img-fluid" alt="Responsive image">
+            <img src="/images/img/asvesti.png" class="img-fluid mt-1 mb-1" alt="Responsive image">
         </div>
-        <div class="sidebar-brand-text mx-3">Sales Inventory</div>
+        <div class="sidebar-brand-text mx-3 text-white">Sales Inventory</div>
     </a>
 
     <!-- Divider -->
@@ -14,15 +14,15 @@
     <!-- Nav Item - Dashboard -->
     <li class="nav-item">
         <a class="nav-link" href="/index">
-            <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Dashboard</span></a>
+            <i class="fas fa-fw fa-tachometer-alt icon-color"></i>
+            <span class="text-white">Dashboard</span></a>
     </li>
 
     <!-- Divider -->
     <hr class="sidebar-divider">
 
     <!-- Heading -->
-    <div class="sidebar-heading">
+    <div class="sidebar-heading text-white fw700">
         Interface
     </div>
 
@@ -30,12 +30,12 @@
     <li class="nav-item">
         <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
             aria-controls="collapseTwo">
-            <i class="fas fa-fw fa-cog"></i>
-            <span>Masters</span>
+            <i class="fas fa-fw fa-cog text-white"></i>
+            <span class="text-white">Masters</span>
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-options py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Contents:</h6>
+                <h6 class="collapse-header text-black">Contents:</h6>
                 <a class="collapse-item" href="/access">
                     <i class="fa fa-key" aria-hidden="true"></i>
                     <span>Access Type</span>
@@ -76,8 +76,8 @@
     <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTransactions"
             aria-expanded="true" aria-controls="collapseTransactions">
-            <i class="fas fa-hand-holding-usd"></i>
-            <span>Transanctions</span>
+            <i class="fas fa-hand-holding-usd text-white"></i>
+            <span class="text-white">Transanctions</span>
         </a>
         <div id="collapseTransactions" class="collapse" aria-labelledby="headingTransactions"
             data-parent="#accordionSidebar">
