--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -1,31 +1,54 @@
 :root{
   --clr-1: #272829;
-  --clr-2: #8a8c96;
+  --clr-2: #AD877B;
   --clr-3: #e4e4e4;
   --clr-4: #FFF6E0;
 
   --clr-font-white: #fff;
   --clr-font-black: #000;
+  --clr-font: white;
+  --clr-icons: #E8E8E8;
+  --clr-header-bg: #AD877B;
+  --clr-tableheader-bg: #584c4c;
+  --clr-sb-bg: #AD877B;
 
-  --clr-sb-bg: #9c2c3d;
-
-  --clr-body-bg: #1a202b;
+  --clr-body-bg: #483434;
 
   --bg-clr: #6d1825;
   --clr-5: #313638;
-  --clr-6: #d44d61;
-  --clr-7: #F7322F;
+  --clr-6: #483434;
+  --clr-7: #d82a27;
   --clr-8: #992d3e;
-  --clr-btn: #ff546e;
+  --clr-btn: #483434;
   --clr-9: #ffb2bd;
-  --clr-10: #eaecf4;
+  --clr-10: #ffffff;
 
-  --ff-main: 'Barlow', sans-serif;
+  --ff-main: 'Open Sans', sans-serif;
   --ff-side: 'Poppins', sans-serif;
 
   --clr-rs-1: #4C3A51;
   
+  --fw-700: '700';
 }
+
+.product-image{
+  border: solid 1px var(--clr-btn);
+  border-radius: 0.375rem;
+}
+
+.img-thumbnail{
+  height: 200px !important;
+  width: 200px !important;
+}
+
+.sidebar-dark .nav-item .nav-link[data-toggle=collapse]::after {
+  color: var(--clr-font) !important;
+}
+
+.icon-color{
+  color: var(--clr-icons) !important;
+}
+
 .yearly-chart{
   height: 375px;
 }
@@ -72,7 +95,7 @@
 
 body {
   margin: 0px;
-  padding: .8rem .8rem 0rem .8rem;
+padding-right: 10px;
   font-family: var(--ff-main) !important;
   background-color: var(--clr-body-bg) !important;
 }
@@ -92,6 +115,7 @@ a {
 
 .bmss-link{
   color: var(--clr-7) !important;
+  cursor: pointer;
 }
 
 .align{
@@ -137,8 +161,8 @@ a {
 /* --- SIDEBAR --- */
 
 .collapse-item.active {
-  color: var(--clr-8) !important;
-  font-weight: 700;
+  background-color: var(--clr-sb-bg) !important;
+  color: var(--clr-font-white) !important;
 }
 
 .sidebar-bg{
@@ -147,8 +171,7 @@ a {
 }
 
 .sidebar{
-  min-height: 98vh !important;
-  border-radius: 0.375rem;
+  min-height: 100vh;
 }
 
 .sidebar .nav-item .collapse{
@@ -161,7 +184,7 @@ a {
 
 /* --- TOPBAR --- */
 .topbar-bg{
-  background-color: var(--clr-sb-bg);
+  background-color: var(--clr-header-bg);
   padding: 10px;
   border-radius: 0.375rem;
 }
@@ -210,8 +233,8 @@ a {
 }
 
 .btn-outline-inventory-lighter{
-  color: var(--clr-7) !important;
-  border-color: var(--clr-7) !important;
+  color: var(--clr-6) !important;
+  border-color: var(--clr-6) !important;
 }
 
 .btn-outline-inventory-lighter:hover{
@@ -223,13 +246,16 @@ a {
 /* CARD STYLE*/
 
 .header-bg{
-  background-color: var(--clr-sb-bg) !important;
-  border-color: var(--clr-sb-bg) !important;
+  background-color: var(--clr-header-bg) !important;
+  border-color: var(--clr-header-bg) !important;
 }
 
 .card{
   border: none !important;
+  background-color: var(--clr-font-white) !important; 
 }
+
+
 
 .table-size{
   height: 625px !important;
@@ -241,6 +267,14 @@ a {
   color: var(--clr-font-white) !important;
 }
 
+.text-black{
+  color: var(--clr-font-black) !important;
+}
+
+.text-asvesti{
+  color: var(--clr-font) !important;
+}
+
 .bmss-link-trigger {
   cursor: pointer;
 }
@@ -250,6 +284,11 @@ a {
 }
 
 /* TABLES STYLE */
+
+.table-bordered td, .table-bordered th {
+  border: 1px solid var(--clr-btn) !important;
+}
+
 .date-width{
   width: 300px !important;
 }
@@ -278,7 +317,7 @@ td{
 .table-header {
   position: sticky;
   top: 0;
-  background-color: var(--clr-2);
+  background-color: var(--clr-tableheader-bg);
   z-index: 1;
 }
 
@@ -324,7 +363,7 @@ td{
     }
 
     .custom-mobile-table tbody tr:nth-child(even){
-        background-color: var(--clr-rs-1) !important;
+        background-color: var(--clr-2) !important;
         color: var(--clr-font-white);
     }
   /* --IMPORTANT-- */
