--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -37,36 +37,37 @@
             <div class="bg-options py-2 collapse-inner rounded">
                 <h6 class="collapse-header text-black">Contents:</h6>
                 <a class="collapse-item" href="/access">
-                    <i class="fa fa-key" aria-hidden="true"></i>
                     <span>Access Type</span>
                 </a>
                 <a class="collapse-item" href="/position">
-                    <i class="fa fa-street-view" aria-hidden="true"></i>
                     <span>Position Type</span>
                 </a>
                 <a class="collapse-item" href="/users">
-                    <i class="fa fa-users" aria-hidden="true"></i>
                     <span>Users</span>
                 </a>
                 <a class="collapse-item" href="/employees">
-                    <i class="fa fa-address-book" aria-hidden="true"></i>
                     <span>Employees</span>
                 </a>
                 <a class="collapse-item" href="/products">
-                    <i class="fa fa-shopping-bag" aria-hidden="true"></i>
                     <span>Products</span>
                 </a>
                 <a class="collapse-item" href="/category">
-                    <i class="fa fa-address-book" aria-hidden="true"></i>
                     <span>Category</span>
                 </a>
                 <a class="collapse-item" href="/pos">
-                    <i class="fa fa-calculator" aria-hidden="true"></i>
                     <span>POS</span>
                 </a>
                 <a class="collapse-item" href="/branch">
-                    <i class="fas fa-code-branch"></i>
                     <span>Branch</span>
+                </a>
+                <a class="collapse-item" href="#">
+                    <span>Location</span>
+                </a>
+                <a class="collapse-item" href="#">
+                    <span>Vendor</span>
+                </a>
+                <a class="collapse-item" href="#">
+                    <span>Material Cost</span>
                 </a>
             </div>
         </div>
@@ -84,7 +85,6 @@
             <div class="bg-options py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Contents:</h6>
                 <a class="collapse-item" href="/salesdetails">
-                    <i class="fas fa-chart-line"></i>
                     <span>Sales Details</span>
                 </a>
                 <!-- <a class="collapse-item" href="/salesitems">
@@ -92,20 +92,54 @@
                     <span>Sales Items</span>
                 </a> -->
                 <a class="collapse-item" href="/shiftreports">
-                    <i class="fas fa-clipboard-list"></i>
                     <span>Shifts Reports</span>
                 </a>
                 <a class="collapse-item" href="/cashreports">
-                    <i class="fas fa-receipt"></i>
                     <span>Cash Reports</span>
                 </a>
                 <a class="collapse-item" href="/productprice">
-                    <i class="fas fa-dollar-sign"></i>
                     <span>Product Price</span>
                 </a>
                 <a class="collapse-item" href="/pricechange">
-                    <i class="fas fa-file-invoice"></i>
                     <span>Price Change</span>
+                </a>
+            </div>
+        </div>
+    </li>
+
+    <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseInventory"
+            aria-expanded="true" aria-controls="collapseInventory">
+            <i class="fas fa-hand-holding-usd text-white"></i>
+            <span class="text-white">Inventory</span>
+        </a>
+        <div id="collapseInventory" class="collapse" aria-labelledby="headingTransactions"
+            data-parent="#accordionSidebar">
+            <div class="bg-options py-2 collapse-inner rounded">
+                <h6 class="collapse-header">Contents:</h6>
+                <a class="collapse-item" href="#">
+                    <span>Purchase Order</span>
+                </a>
+                <a class="collapse-item" href="#">
+                    <span>Transfer Orders</span>
+                </a>
+                <a class="collapse-item" href="#">
+                    <span>Stock Adjustment</span>
+                </a>
+                <a class="collapse-item" href="#">
+                    <span>Inventory Counts</span>
+                </a>
+                <a class="collapse-item" href="#">
+                    <span>Inventory History</span>
+                </a>
+                <a class="collapse-item" href="#">
+                    <span>Valuation Report</span>
+                </a>
+                <a class="collapse-item" href="#">
+                    <span>Production</span>
+                </a>
+                <a class="collapse-item" href="#">
+                    <span>System Logs</span>
                 </a>
             </div>
         </div>
