--- a/views/topbar.ejs
+++ b/views/topbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand navbar-light topbar-bg topbar static-top shadow">
+<nav class="navbar navbar-expand navbar-light topbar-bg topbar static-top shadow mt-2">
 
     <!-- Sidebar Toggle (Topbar) -->
     <button id="sidebarToggleTop" class="btn topbar-btn-clr d-md-none rounded-circle mr-3">
