--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -8,11 +8,11 @@
   --clr-font-black: #000;
   --clr-font: white;
   --clr-icons: #E8E8E8;
-  --clr-header-bg: #AD877B;
+  --clr-cardheader-bg: #AD877B;
   --clr-tableheader-bg: #584c4c;
-  --clr-sb-bg: #AD877B;
+  --clr-sidebar-bg: #483434;
 
-  --clr-body-bg: #483434;
+  --clr-body-bg: #FFFF;
 
   --bg-clr: #6d1825;
   --clr-5: #313638;
@@ -54,13 +54,7 @@
 }
 
 .dashboard-size{
-  height: 446px;
-}
-
-.chartbox{
-  border-radius: 10px;
-  padding: 15px;
-  border: solid 3px var(--clr-sb-bg);
+  height: 453px;
 }
 
 .padding-fix{
@@ -68,7 +62,7 @@
 }
 
 .custom-bg{
-  background-color: var(--clr-sb-bg);
+  background-color: var(--clr-sidebar-bg);
 }
 
 .scrollable-dashboard-table-container {
@@ -161,12 +155,12 @@ a {
 /* --- SIDEBAR --- */
 
 .collapse-item.active {
-  background-color: var(--clr-sb-bg) !important;
+  background-color: var(--clr-sidebar-bg) !important;
   color: var(--clr-font-white) !important;
 }
 
 .sidebar-bg{
-  background-color: var(--clr-sb-bg) !important;
+  background-color: var(--clr-sidebar-bg) !important;
   background-size: cover;
 }
 
@@ -184,9 +178,10 @@ a {
 
 /* --- TOPBAR --- */
 .topbar-bg{
-  background-color: var(--clr-header-bg);
+  background-color: var(--clr-cardheader-bg);
   padding: 10px;
   border-radius: 0.375rem;
+  border: 3px solid var(--clr-sidebar-bg);
 }
 
 .topbar{
@@ -246,12 +241,16 @@ a {
 /* CARD STYLE*/
 
 .header-bg{
-  background-color: var(--clr-header-bg) !important;
-  border-color: var(--clr-header-bg) !important;
+  background-color: var(--clr-cardheader-bg) !important;
+  border-bottom: 2px solid var(--clr-sidebar-bg) !important;
+}
+
+.card-header:first-child{
+  border-radius: 0 !important;
 }
 
 .card{
-  border: none !important;
+  border: 3px solid var(--clr-sidebar-bg) !important;
   background-color: var(--clr-font-white) !important; 
 }
 
@@ -369,18 +368,18 @@ td{
   /* --IMPORTANT-- */
 
     .bg-options{
-      background-color: var(--clr-sb-bg) !important;
+      background-color: var(--clr-sidebar-bg) !important;
     }
 
     .collapse-item{
       color: var(--clr-font-white) !important;
     }
     .collapse-item:hover{
-      color: var(--clr-sb-bg) !important;
+      color: var(--clr-sidebar-bg) !important;
     }
 
     .collapse-item.active {
-      color: var(--clr-sb-bg) !important;
+      color: var(--clr-sidebar-bg) !important;
       font-weight: 300 !important;
       background-color: var(--clr-10) !important;
     }
