--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -60,7 +60,7 @@
                 <a class="collapse-item" href="/branch">
                     <span>Branch</span>
                 </a>
-                <a class="collapse-item" href="#">
+                <a class="collapse-item" href="/location">
                     <span>Location</span>
                 </a>
                 <a class="collapse-item" href="#">
