Added Vendors UI and scripts(Load, save, status, and update)

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -63,7 +63,7 @@
                 <a class="collapse-item" href="/location">
                     <span>Location</span>
                 </a>
-                <a class="collapse-item" href="#">
+                <a class="collapse-item" href="/vendors">
                     <span>Vendor</span>
                 </a>
                 <a class="collapse-item" href="#">
