--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -66,7 +66,7 @@
                 <a class="collapse-item" href="/vendors">
                     <span>Vendor</span>
                 </a>
-                <a class="collapse-item" href="#">
+                <a class="collapse-item" href="/materialcost">
                     <span>Material Cost</span>
                 </a>
             </div>
