Added UI for systemlogs and scripts(load and save)

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -138,7 +138,7 @@
                 <a class="collapse-item" href="#">
                     <span>Production</span>
                 </a>
-                <a class="collapse-item" href="#">
+                <a class="collapse-item" href="/systemlogs">
                     <span>System Logs</span>
                 </a>
             </div>
