--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -99,6 +99,10 @@ padding-right: 10px;
   vertical-align: middle!important;
 }
 
+.align-middle{
+  vertical-align: middle!important;
+}
+
 .no-wrap{
   white-space: nowrap;
 }
@@ -142,14 +146,13 @@ a {
   background-image: url('/images/img/Black-And-Red-HD-Wallpapers.jpg');
   position: absolute;
   z-index: -1;
-  top: 0;
+  top: 14px;
   bottom: 0;
-  left: 0;
+  left: 13px;
   right: 0;
-  opacity: .35;
-  width: 100%;
-  height: 100%;
-  border-radius: 0.875rem;
+  width: 99%;
+  height: 98%;
+  border-radius: 0.875rem !important;
 }
 
 /* --- SIDEBAR --- */
@@ -313,6 +316,11 @@ td{
   overflow-y: auto !important;
 }
 
+.scrollable-table-container-sm{
+  max-height: 310px !important; 
+  overflow-y: auto !important;
+}
+
 .table-header {
   position: sticky;
   top: 0;
@@ -425,6 +433,10 @@ td{
   margin-left: 5.1rem !important;
 }
 
+.hidden{
+  display: none;
+}
+
 .custom-dropdown {
   display: none;
   width: 100%;
@@ -458,4 +470,53 @@ td{
 
 .label-width-2{
   width: 7rem;
+}
+
+/* Animation for appearing */
+@keyframes appear {
+    from {
+        opacity: 0;
+        max-height: 0;
+    }
+    to {
+        opacity: 1;
+        max-height: 500px; /* Adjust height as needed */
+    }
+}
+
+/* Animation for disappearing */
+@keyframes disappear {
+    from {
+        opacity: 1;
+        max-height: 500px; /* Adjust height as needed */
+    }
+    to {
+        opacity: 0;
+        max-height: 0;
+    }
+}
+
+/* Apply animations to fields */
+.hidden-field {
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  display: block;
+  overflow: hidden;
+  max-height: 0;
+  opacity: 0;
+}
+
+.appear {
+    animation-name: appear;
+}
+.disappear {
+    animation-name: disappear;
+}
+
+.add{
+  color: rgb(1, 221, 1) !important;
+}
+
+.deduct{
+  color: red !important;
 }
