--- a/views/purchaseorder/purchaseorder.ejs
+++ b/views/purchaseorder/purchaseorder.ejs
@@ -1,3 +1,45 @@
+<div class="modal fade " id="order-details-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header custom-bg text-white">
+                <h5 class="modal-title" id="exampleModalLabel">Order Details</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="custom-modal-body">
+                <div class="card shadow table-size">
+                    <div class="card-header py-3 header-bg">
+                        <h6 class="m-0 font-weight-bold table-title text-white">Order Details Data:</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive scrollable-table-container">
+                            <table class="table table-bordered custom-mobile-table" id="orderdetails-dataTable" width="100%" cellspacing="10">
+                                <thead class="table-header">
+                                    <tr>
+                                        <th class = "col-1">Product ID</th>
+                                        <th class = "col-3">Order ID</th>
+                                        <th class = "col-3">Description</th>
+                                        <th class = "col-2">Quantity</th>
+                                        <th class = "col-1">Unit Price</th>
+                                        <th class = "col-2">Total Price</th>               
+                                    </tr>
+                                </thead>          
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-inventory" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Begin PCreated by Content -->
 <div class="container-fluid">
     <!-- Content Row -->
