--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -120,7 +120,7 @@
                 <a class="collapse-item" href="/purchaseorder">
                     <span>Purchase Order</span>
                 </a>
-                <a class="collapse-item" href="#">
+                <a class="collapse-item" href="/transferorder">
                     <span>Transfer Orders</span>
                 </a>
                 <a class="collapse-item" href="#">
