Added display for description per product id in transfer ID

--- a/views/transferorder/transferorder.ejs
+++ b/views/transferorder/transferorder.ejs
@@ -20,6 +20,7 @@
                                         <th class = "col-1">Item ID</th>
                                         <th class = "col-3">Transfer ID</th>
                                         <th class = "col-3">Product ID</th>
+                                        <th class = "col-3">Description</th>
                                         <th class = "col-2">Quantity</th>             
                                     </tr>
                                 </thead>          
